Updated citation information

--- a/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
+++ b/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
@@ -63,7 +63,7 @@ You should have received a copy of the GNU General Public License along with thi
 \break
 %DOI: \url{}\\ %fill this for post-print
 %URL: \url{}\\ %fill this for post-print
-Cite: Y. Onishi, “Original LilyPond Snippets and Their Grammars,” (Version \today), GitHub repository, \href{https://github.com/yoshiakionishi/lilypond-snippets}{https://github.com/yoshiakionishi/lilypond-snippets}\\ %fill this for post-print
+Cite: Onishi, Yoshiaki. “LilyPond Contemporary Notation Cookbook: Snippets and Their Grammars,” (Version \today), GitHub repository, \href{https://github.com/yoshiakionishi/lilypond-snippets}{https://github.com/yoshiakionishi/lilypond-snippets}\\ %fill this for post-print
 
 
 \frontmatter
