--- a/DOCUMENT/appendix-a.tex
+++ b/DOCUMENT/appendix-a.tex
@@ -30,6 +30,7 @@ As I taught LilyPond in a special topic course at the University of Delaware in 
 \item LilyPond – Extending v2.24.4: \url{https://lilypond.org/doc/v2.24/Documentation/extending/index#top} 
 \item Scheme (in LilyPond):	\url{https://scheme-book.readthedocs.io/en/latest/} 
 \item Extending LilyPond: \url{https://extending-lilypond.gitlab.io/en/extending/index.html}
+\item Scheme Resources \url{https://www.gnu.org/software/guile/learn/#scheme-resources}
 \item PostScript Manual: \url{https://www.adobe.com/jp/print/postscript/pdfs/PLRM.pdf}
 \item PostScript Tutorial: \url{https://paulbourke.net/dataformats/postscript/}
 \end{itemize}
