--- a/DOCUMENT/clefs.tex
+++ b/DOCUMENT/clefs.tex
@@ -143,7 +143,7 @@ newpath
 \end{verbatim}
 
 \item Once \verb|\strPosClef| is used, in order to revert back to the normal clef, \verb|\normalClef| must be used.
-\item See \textbf{Combinations} chapter for a possible use of this clef.
+\item See \hyperref[sec:comb_strings]{Prescriptive Notation for String Instruments} for a possible use of this clef.
 \end{enumerate}
 
 \hyperref[sec:toc]{\\ \textbf{Table of Contents}}
