Updated Dec. 14 Commit

--- a/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
+++ b/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
@@ -89,11 +89,13 @@ Cite: Onishi, Yoshiaki. “LilyPond Contemporary Notation Cookbook: Snippets and
 
 \input{markups.tex}
 
-\input{staff.tex}
+\input{staff_lines.tex}
 
 \input{stems.tex}
 
 \input{combinations.tex}
+
+\input{miscellanies.tex}
 
 %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%
