--- a/DOCUMENT/foreword.tex
+++ b/DOCUMENT/foreword.tex
@@ -65,6 +65,10 @@ Even though I have not met him, I am grateful to Ben Lemon for his generosity in
 I also want to thank my friends who inspired me to start using LilyPond. It was Cole Ingraham who first introduced me to the program in 2016. My initial attempt at using it was not successful, but more recently, Santiago Beis composed and typeset his orchestral piece \textit{Spletna} entirely in LilyPond, which compelled me to give it another try.
 
 I extend my gratitude to my composition students at the University of Delaware School of Music, with whom I embarked on this journey of learning LilyPond. Even though they were not directly affected by Finale's discontinuation, they remained curious and enthusiastic about exploring this program. I hope that if the programs of their choice ever face a fate similar to Finale (though I sincerely hope they do not), they will be better equipped to adapt without the annoyance and arduous work often associated with transitioning to a new tool.
+\\
+
+\hyperref[sec:toc]{\\ \textbf{Table of Contents}}
+
 
 \clearpage
 \vfill \break
