--- a/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
+++ b/DOCUMENT/YO_SNIPPETS_COOKBOOK_MASTER.tex
@@ -89,6 +89,8 @@ Cite: Onishi, Yoshiaki. “LilyPond Contemporary Notation Cookbook: Snippets and
 
 \input{markups.tex}
 
+\input{spanners.tex}
+
 \input{staff_lines.tex}
 
 \input{stems.tex}
