--- a/DOCUMENT/YO_snippets_biblio.bib
+++ b/DOCUMENT/YO_snippets_biblio.bib
@@ -31,4 +31,35 @@
    pages = {3 p.l., 53 p.},
    year = {1921},
 }
+@book{RN1736,
+   author = {Takemitsu, Tōru},
+   title = {Fantasma/cantos : for clarinet and orchestra},
+   publisher = {Schott ; Schott Japan},
+   year = {1993},
+
+}
+@book{RN1735,
+   author = {Takemitsu, Tōru},
+   title = {Les yeux clos II : for piano},
+   publisher = {Schott ; Schott Japan},
+   year = {1990},
+
+}
+@book{RN1738,
+   author = {Boulez, Pierre},
+   title = {Sur incises : pour trois pianos, trois harpes et trois percussions-claviers (1996/1998)},
+   publisher = {Universal Edition},
+   year = {1998},
+
+}
+@book{RN1737,
+   author = {Boulez, Pierre},
+   title = {... explosante-fixe ... transitoire VII : (version 1991/93)},
+   publisher = {Universal Edition},
+   year = {1991},
+
+}
+
+
+
 
